ui: Application header is fixed on top of screen
- Application bar should not be scrolled out from screen and this
required to disable scrollbars on top elements and enable scrolling for
content section. It allows headers and left panel to remain on their positions
during scrolling.
Also this changes include additional refactoring for page titles. Previously,
to apply padding above the title, padding has been applied to outer container
and this affected how sticky panels look on Metrics and Databases panels.
To avoid this, padding is applied to Header text instead of container.

Release note: None

--- a/pkg/ui/src/views/cluster/containers/clusterOverview/cluster.styl
+++ b/pkg/ui/src/views/cluster/containers/clusterOverview/cluster.styl
@@ -25,8 +25,7 @@
   padding-top 0
 
 .cluster-page
-  height 100vh
-  max-height 100vh
+  height 100%
   display flex
   flex-direction column
   overflow hidden
